--- a/app/src/main/res/layout/list_item_weather.xml
+++ b/app/src/main/res/layout/list_item_weather.xml
@@ -1,6 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/txt_date_aux"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="24dp"
+        android:text= "@string/date"/>
+
+    <TextView
+        android:id="@+id/txt_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="24dp"
+        android:layout_toEndOf="@+id/txt_date_aux"
+        android:textColor="@color/teal_700" />
+
+    <TextView
+        android:id="@+id/txt_temp_aux"
+        android:layout_below="@+id/txt_date_aux"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="24dp"
+        android:text= "@string/temp"/>
+
+    <TextView
+        android:id="@+id/txt_temp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/txt_date_aux"
+        android:textSize="24dp"
+        android:layout_toEndOf="@+id/txt_temp_aux"
+        android:textColor="@color/teal_700" />
+
+    <TextView
+        android:id="@+id/txt_hum_aux"
+        android:layout_below="@+id/txt_temp_aux"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="24dp"
+        android:text= "@string/hum"/>
+
+    <TextView
+        android:id="@+id/txt_hum"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/txt_temp_aux"
+        android:textSize="24dp"
+        android:layout_toEndOf="@+id/txt_hum_aux"
+        android:textColor="#9C27B0" />
+
+</RelativeLayout>
