--- a/app/src/main/res/layout/list_item_weather.xml
+++ b/app/src/main/res/layout/list_item_weather.xml
@@ -8,14 +8,15 @@
         android:id="@+id/txt_date_aux"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="24dp"
+        android:textSize="24sp"
         android:text= "@string/date"/>
 
     <TextView
         android:id="@+id/txt_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="24dp"
+        android:layout_marginStart="5dp"
+        android:textSize="24sp"
         android:layout_toEndOf="@+id/txt_date_aux"
         android:textColor="@color/teal_700" />
 
@@ -24,7 +25,7 @@
         android:layout_below="@+id/txt_date_aux"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="24dp"
+        android:textSize="24sp"
         android:text= "@string/temp"/>
 
     <TextView
@@ -32,7 +33,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/txt_date_aux"
-        android:textSize="24dp"
+        android:layout_marginStart="5dp"
+        android:textSize="24sp"
         android:layout_toEndOf="@+id/txt_temp_aux"
         android:textColor="@color/teal_700" />
 
@@ -41,7 +43,7 @@
         android:layout_below="@+id/txt_temp_aux"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="24dp"
+        android:textSize="24sp"
         android:text= "@string/hum"/>
 
     <TextView
@@ -49,7 +51,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/txt_temp_aux"
-        android:textSize="24dp"
+        android:layout_marginStart="5dp"
+        android:textSize="24sp"
         android:layout_toEndOf="@+id/txt_hum_aux"
         android:textColor="#9C27B0" />
 
